# babushka

./: .gitignore  Cargo.toml  README.md  build.rs  lcov.info
examples/: common.rs  display_terashima.rs  draw_piece.rs  nfp_0_gif.rs  nfp_1_gif.rs  nfp_display.rs  nfp_hole.rs  no_fit_polygon.rs  piece.rs  polygon_slide_distance.rs  rotate.rs  segment_distance_to_coincident_segment.rs  segment_intersect.rs  show_nfp.rs  show_polygons.rs  terashima.rs  union.rs
src/: bounding_box.rs  clip.rs  gpc.c  gpc.h  gpc.rs  kernelf64.rs  lib.rs  multi_polygon.rs  nfp.rs  no_fit_polygon.rs  no_fit_polygon_old.rs  piece.rs  point.rs  polygon.rs  polygon_graph.rs  raster.rs  segment.rs  utils.rs
src/clipping/: clip.rs  lmt.rs  mod.rs
src/kernelf64/: mod.rs  point2d.rs  polygon.rs  segment.rs
src/nesting/: genetic.rs  mod.rs  problem.rs
src/nesting/problem/: irregular_bin_packing.rs  mod.rs
src/parsers/: mod.rs  terashima.rs
test_data/Terashima2/: .!7170!_ReadmeT2.txt  OpTA001C5.txt  OpTA002C5.txt  OpTA003C5.txt  OpTA004C5.txt  OpTA005C5.txt  OpTA006C5.txt  OpTA007C5.txt  OpTA008C5.txt  OpTA009C5.txt  OpTA010C5.txt  OpTA011C10.txt  OpTA012C10.txt  OpTA013C10.txt  OpTA014C10.txt  OpTA015C10.txt  OpTA016C10.txt  OpTA017C10.txt  OpTA018C10.txt  OpTA019C10.txt  OpTA020C10.txt  OpTA021C20.txt  OpTA022C20.txt  OpTA023C20.txt  OpTA024C20.txt  OpTA025C20.txt  OpTA026C20.txt  OpTA027C20.txt  OpTA028C20.txt  OpTA029C20.txt  OpTA030C20.txt  OpTB001C10.txt  OpTB002C10.txt  OpTB003C10.txt  OpTB004C10.txt  OpTB005C10.txt  OpTB006C10.txt  OpTB007C10.txt  OpTB008C10.txt  OpTB009C10.txt  (+922 more)
