[package]
name = "babushka"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "bin packing and nesting library"
homepage = "https://github.com/davefol/babushka"
readme = "README.md"
keywords = ["nesting", "packing", "geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
