[package]
name = "babushka"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "bin packing and nesting library"
homepage = "https://github.com/davefol/babushka"
readme = "README.md"
keywords = ["nesting", "packing", "geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
font8x8 = "0.3.1"
itertools = "0.13.0"
num-traits = "0.2.19"

[dev-dependencies]
minifb = "0.27"
