[package]
name = "babushka"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "bin packing and nesting library"
homepage = "https://github.com/davefol/babushka"
readme = "README.md"
keywords = ["nesting", "packing", "geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.87", features=["backtrace"] }
approx = "0.5.1"
itertools = "0.13.0"
num-traits = "0.2.19"
petgraph = "0.6.5"
libc = "0.2"

minifb = {version = "0.27", optional = true}
font8x8 = { version = "0.3.1", optional = true}
gif = { version = "0.13.1", optional = true}

[features]
default = ["example"]
raster = ["font8x8"]
example = ["minifb", "raster", "gif"]

[build-dependencies]
cc = "1.0"
bindgen = "0.65"